<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">MyBooks</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_app">About App</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_fragment">Dashboard Fragment</string>
    <string name="favourites_fragment">Favourites Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="add_to_favourites">Add to Favourites</string>
    <string name="action_sort">Sort</string>
    <string name="Menu">Menu\n</string>
    <string name="AboutApp">Welcome to BookHub, your ultimate destination for discovering and enjoying a diverse range of books. Our mission is to connect readers with stories that inspire, educate, and entertain. With personalized recommendations, an extensive library, and comprehensive book details, BookHub ensures you find the perfect read every time.</string>
    <string name="every_story_finds_its_home">Every Story Finds Its Home</string>
    <string name="author_or_poet">Author / Poet</string>
    <string name="title_of_book">Title of Book</string>
    <string name="type_of_book_you_like_most">Category of book you liked</string>
    <string name="your_name">Your Name</string>
    <string name="todo">TODO</string>
    <string name="name_of_the_book">Name Of The Book</string>
    <string name="name_of_the__book">Name of the book</string>
    <string name="rs_299">Rs. 299</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="_4_5">4.5</string>
    <string name="image">Image</string>
    <string name="name_of_the___book">Name of the book</string>

</resources>
