<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_bg"
    tools:context=".activity.SplashActivity">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="204dp"
        android:layout_height="198dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/ic_bookhub_logo"
        app:layout_constraintBottom_toTopOf="@+id/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5"
        tools:ignore="ImageContrastCheck,ImageContrastCheck,ImageContrastCheck" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/every_story_finds_its_home"
        android:textColor="@android:color/black"
        android:textSize="32sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo_image"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/your_name"
        android:drawablePadding="10dp"
        android:hint="@string/your_name"
        android:padding="12dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textStyle="bold"
        android:imeOptions="actionNext"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etBookType"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/book_you_love"
        android:drawablePadding="10dp"
        android:hint="@string/type_of_book_you_like_most"
        android:padding="12dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textStyle="bold"
        android:imeOptions="actionNext"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etUsername"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etBookName"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:drawablePadding="10dp"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/title_of_book"
        android:hint="@string/title_of_book"
        android:importantForAutofill="no"
        android:padding="12dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textStyle="bold"
        android:imeOptions="actionNext"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBookType"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="VisualLintTextFieldSize" />

    <EditText
        android:id="@+id/etAuthorName"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:drawableLeft="@drawable/author_of_book"
        android:drawablePadding="10dp"
        android:hint="@string/author_or_poet"
        android:padding="12dp"
        android:textColor="@color/text_color"
        android:textColorHint="@color/hint_color"
        android:textStyle="bold"
        android:imeOptions="actionDone"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBookName"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="Autofill,VisualLintTextFieldSize" />

    <FrameLayout
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:background="@drawable/custom_button"
        android:padding="12dp"
        android:contentDescription="Start Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etAuthorName"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.2">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:importantForAccessibility="no"
            android:src="@drawable/baseline_start_24" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
